@@ -5958,6 +5958,25 @@
     operands[3] = adj_offsettable_operand (operands[0], 4);
   if (! ADDRESS_REG_P (operands[0]))
     {
+      if (reg_overlap_mentioned_p (operands[2], operands[0]))
+	{
+	  if (reg_overlap_mentioned_p (operands[2], operands[3]))
+	    {
+#ifdef MOTOROLA
+	      return \"or%.l %0,%2\;jbeq %l1\";
+#else
+	      return \"or%.l %0,%2\;jeq %l1\";
+#endif
+	    }
+	  else
+	    {
+#ifdef MOTOROLA
+	      return \"or%.l %3,%2\;jbeq %l1\";
+#else
+	      return \"or%.l %3,%2\;jeq %l1\";
+#endif
+	    }
+	}
 #ifdef MOTOROLA
       return \"move%.l %0,%2\;or%.l %3,%2\;jbeq %l1\";
 #else
@@ -6019,6 +6038,25 @@
     operands[3] = adj_offsettable_operand (operands[0], 4);
   if (!ADDRESS_REG_P (operands[0]))
     {
+      if (reg_overlap_mentioned_p (operands[2], operands[0]))
+	{
+	  if (reg_overlap_mentioned_p (operands[2], operands[3]))
+	    {
+#ifdef MOTOROLA
+	      return \"or%.l %0,%2\;jbne %l1\";
+#else
+	      return \"or%.l %0,%2\;jne %l1\";
+#endif
+	    }
+	  else
+	    {
+#ifdef MOTOROLA
+	      return \"or%.l %3,%2\;jbne %l1\";
+#else
+	      return \"or%.l %3,%2\;jne %l1\";
+#endif
+	    }
+	}
 #ifdef MOTOROLA
       return \"move%.l %0,%2\;or%.l %3,%2\;jbne %l1\";
 #else
